src/objects/ACCL__Order__c.object
<CustomObject>
    <description>Holds the header details of the order entry.</description>
	<fields>
        <fullName>MDLZ_SFItemsReceived__c</fullName>
        <description>Holds the total number of items received in SF that were edited/added by user.</description>
        <label>SF Items Received</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__ASN__c</fullName>
        <description>The advanced shipping notice number provided by the supplier for a special delivery.</description>
        <label>ASN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__ATM_Confirmation_Nr__c</fullName>
        <description>Contains the confirmation number of the receipt, printed by ATM.</description>
        <label>ATM Confirmation Nr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Accountable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system displays the Initiator of the order as the initial accountable</description>
        <label>Accountable</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountableOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Actual_Check_Out_Quantity__c</fullName>
        <description>Total product check out quantiy for the tour in question as actually counted by the tour executing user.</description>
        <label>Actual Check Out Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Actual_Check_Out_Type__c</fullName>
        <description>Check out type (method) that is to be applied in the produc check out document based on the given template settings.</description>
        <label>Actual Check Out Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Pallets</fullName>
                </value>
                <value>
                    <fullName>Counting Groups</fullName>
                </value>
                <value>
                    <fullName>SKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Bank_Name__c</fullName>
        <description>Contains the name of the bank.</description>
        <label>Bank Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SantanderBank</fullName>
                </value>
                <value>
                    <fullName>CitiBank</fullName>
                </value>
                <value>
                    <fullName>Bank_of_Scotland</fullName>
                </value>
                <value>
                    <fullName>IngDiBa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Bill_Recipient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the bill to of the order entry</description>
        <label>Bill Recipient Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Bill Recipient Account)</relationshipLabel>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Calculation_Schema__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The schema used to calculate the order with complex
			pricing.</description>
        <label>Calculation Schema</label>
        <referenceTo>ACCL__CP_Calculation_Schema__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Calculation_Status__c</fullName>
        <description>The complex pricing calculation status.</description>
        <label>Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Calculation_Time__c</fullName>
        <description>Time of the last complex pricing calculation for this order.</description>
        <label>Calculation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the call in which the sales document has been created.</description>
        <label>Call</label>
        <referenceTo>ACCL__Call__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Cancel_Reason__c</fullName>
        <description>Specifies a reason for sales document cancellation.</description>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Z1 - DSD Production cut -production issues/QC</fullName>
                </value>
                <value>
                    <fullName>Z2 - DSD Production cut -inbound not received</fullName>
                </value>
                <value>
                    <fullName>Z3 - DSD Production cut -inventory discrepancy</fullName>
                </value>
                <value>
                    <fullName>Z4 - DSD Carrier Issues</fullName>
                </value>
                <value>
                    <fullName>Z5 - DSD Branch Request</fullName>
                </value>
                <value>
                    <fullName>Z6 - DSD Dist. Planner Request</fullName>
                </value>
                <value>
                    <fullName>Z7 - DSD Trailer Size</fullName>
                </value>
                <value>
                    <fullName>Z8 - DSD Weight / Cube</fullName>
                </value>
                <value>
                    <fullName>Z9 - DSD Discontinued Item at Plant</fullName>
                </value>
                <value>
                    <fullName>ZA - DSD Material not authorized</fullName>
                </value>
                <value>
                    <fullName>ZB - DSD Backorder not allowed</fullName>
                </value>
                <value>
                    <fullName>ZC - DSD CFS Credit Rejection</fullName>
                </value>
                <value>
                    <fullName>ZD - DSD Material flagged for deletion</fullName>
                </value>
                <value>
                    <fullName>ZE - DSD Backorder expired</fullName>
                </value>
                <value>
                    <fullName>ZF - DSD Display cancelled</fullName>
                </value>
                <value>
                    <fullName>ZG - DSD Wrong item ordered</fullName>
                </value>
                <value>
                    <fullName>ZH - DSD BOM not set up in plant</fullName>
                </value>
                <value>
                    <fullName>ZI - DSD Backroom Inventory</fullName>
                </value>
                <value>
                    <fullName>ZJ - DSD Material not released for delivery</fullName>
                </value>
                <value>
                    <fullName>ZK - DSD Past Dated Orders</fullName>
                </value>
                <value>
                    <fullName>ZL - DSD Duplicate Orders</fullName>
                </value>
                <value>
                    <fullName>ZM - DSD CSR Requested</fullName>
                </value>
                <value>
                    <fullName>ZN - DSD NOS Cancelled</fullName>
                </value>
                <value>
                    <fullName>ZO - DSD Insufficient Allocation</fullName>
                </value>
                <value>
                    <fullName>ZP - DSD Material not set up in plant</fullName>
                </value>
                <value>
                    <fullName>ZQ - DSD Demand Adjustment</fullName>
                </value>
                <value>
                    <fullName>ZR - DSD Component Only Returned Item on BOM</fullName>
                </value>
                <value>
                    <fullName>ZS - DSD Suggested Material Substitution</fullName>
                </value>
                <value>
                    <fullName>ZU - DSD Suggested Material Sub-Unavailable Qty</fullName>
                </value>
                <value>
                    <fullName>ZV - DSD BOM substituted - unavailable qty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Check_Out_Quantity__c</fullName>
        <description>Total product check out quantity for the tour in question as given by the HOST interface.</description>
        <label>Check Out Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Check_Out_Type__c</fullName>
        <description>Check out type (method) that is to be applied in the product check out document based on the given template settings.</description>
        <label>Check Out Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Pallets</fullName>
                </value>
                <value>
                    <fullName>Counting Groups</fullName>
                </value>
                <value>
                    <fullName>SKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Currency__c</fullName>
        <description>Specifies the currency of the order based on the sales
			org currency of the order template object. Must have the same
			picklist values that the sales org currency field.</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Customer_Order_Id__c</fullName>
        <label>Customer Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_Item_Switch__c</fullName>
        <description>Field created to address Jira-2154 sync issue. When this field is marked as &quot;Yes&quot; by Order Before Update trigger. Following fields Order Items will be switched to older values using Workflow on Order Items object:
MDLZ_ItemStatus__c
ACCL__Quantity__c
ACCL__Suggested_Quantity__c</description>
        <inlineHelpText>Field created to address Jira-2154 sync issue. No meant for user entry</inlineHelpText>
        <label>Order Item Switch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_KeyAccount__c</fullName>
        <label>KeyAccount</label>
        <length>40</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_LastSavedByUser__c</fullName>
        <label>Last Saved By User</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>MDLZ_isOrderAccepted__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Showing if an order was accepted (true) or rejected by SAP (false).</description>
        <label>Is Order Accepted</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MDLZ_LastupdatedbySAP__c</fullName>
        <description>This field will be updated with the MDLZ_ReceivedBySAP__c field value and it is referred in MDLZ_OrderTriggerHandler.</description>
        <label>LastupdatedbySAP</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>MDLZ_SAPExternalID__c</fullName>
        <externalId>true</externalId>
        <label>SAP External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Date__c</fullName>
        <description>By default next day.Delivery date calculation is
			customized very often.</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Documents_Condition__c</fullName>
        <formula>IF( AND(ACCL__Order_Template__r.RecordType.DeveloperName =
			&apos;Order_Entry&apos; ,
			ISPICKVAL(ACCL__Order_Template__r.ACCL__Document_Type__c,&apos;Delivery&apos;) ),
			true, false)</formula>
        <label>Delivery Documents Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Note__c</fullName>
        <description>Delivery Note</description>
        <label>Delivery Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Delivery Recipient of the selected account</description>
        <label>Delivery Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Delivery Recipient)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Delivery_Terms__c</fullName>
        <description>Terms of delivery.</description>
        <label>Delivery Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ExWarehouse</fullName>
                </value>
                <value>
                    <fullName>FreeOnBoard</fullName>
                </value>
                <value>
                    <fullName>FreeOfCharge</fullName>
                </value>
                <value>
                    <fullName>ScaleOfCharge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Distribution_Relevant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether the orders are relevant for distribution</description>
        <label>Distribution Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Document_Transaction_Type__c</fullName>
        <description>Specifies how to handle a sales document</description>
        <label>Document Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CashInvoice</fullName>
                </value>
                <value>
                    <fullName>CreditInvoice</fullName>
                </value>
                <value>
                    <fullName>ValuatedDeliveryNote</fullName>
                </value>
                <value>
                    <fullName>NonValuatedDeliveryNote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Document_Type__c</fullName>
        <description>Specifies the type of the order document in order to distinguish DSD and non-DSD order entries.</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>ProductCheckIn</fullName>
                </value>
                <value>
                    <fullName>ProductCheckOut</fullName>
                </value>
                <value>
                    <fullName>TruckAudit</fullName>
                </value>
                <value>
                    <fullName>CashCheckIn</fullName>
                </value>
                <value>
                    <fullName>CashCheckOut</fullName>
                </value>
                <value>
                    <fullName>OrderEntry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Gross_Total_Value_Receipt__c</fullName>
        <description>Total value of the order entry in the order/receipt
			currency.</description>
        <label>Gross Total Value(Receipt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Gross_Total_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Gross total value (domestic currency) of the sales
			document including relevant sales taxes. Calculated by the system
			based on the respective sales document item template settings.</description>
        <label>Gross Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Header_Discount_Percentage__c</fullName>
        <description>Percentage value of the header discount.</description>
        <label>Header Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Initiation_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date of initiation of this sales document.</description>
        <label>Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Inventory_Reference_1__c</fullName>
        <description>First reference to the inventory as defined in the order template</description>
        <label>Inventory Reference 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Inventory_Reference_2__c</fullName>
        <description>Second reference to the inventory as defined in the order template</description>
        <label>Inventory Reference 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Inventory_Reference_3__c</fullName>
        <description>Third reference to the inventory as defined in the order template</description>
        <label>Inventory Reference 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Invoice_Note__c</fullName>
        <description>Invoice Note</description>
        <label>Invoice Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Merchandise_Value_Receipt__c</fullName>
        <description>Merchandise value (value of goods) in receipt currency
			not including header discount.</description>
        <label>Merchandise Value Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Mobility_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobility Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to capture customer for which Order is
			created</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Customer)</relationshipLabel>
        <relationshipName>Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>The day the customer commited to the sales document. For
			order entries this is the order date.</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Id__c</fullName>
        <description>Specifies the user readable number used for print-outs
			and customer communication</description>
        <label>Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Order Template for Order Entry</description>
        <label>Order Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Order_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Order_Template__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Paid_Amount_Receipt__c</fullName>
        <description>Paid amount of the order entry in domestic currency. The
			paid amount is a gross value.</description>
        <label>Paid Amount Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Paid_Amount__c</fullName>
        <description>Paid Amount of Order</description>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the payer of the order</description>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Payer)</relationshipLabel>
        <relationshipName>Payers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Payment_Method__c</fullName>
        <description>Describes the manner of the remuneration.</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
                <value>
                    <fullName>Deduction</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>DebitCard</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>MoneyOrder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Payment_Reason__c</fullName>
        <description>Specifies a reason that leads to modifying the document
			handling regarding payments.</description>
        <label>Payment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holiday Week</fullName>
                </value>
                <value>
                    <fullName>Store Inventory</fullName>
                </value>
                <value>
                    <fullName>New Display</fullName>
                </value>
                <value>
                    <fullName>Replace Refused Order</fullName>
                </value>
                <value>
                    <fullName>Allowance Not Given</fullName>
                </value>
                <value>
                    <fullName>Store Sampling Event</fullName>
                </value>
                <value>
                    <fullName>New Store</fullName>
                </value>
                <value>
                    <fullName>Reset</fullName>
                </value>
                <value>
                    <fullName>Low Stock Store</fullName>
                </value>
                <value>
                    <fullName>Could Not Deliver</fullName>
                </value>
                <value>
                    <fullName>Missed Delivery Window</fullName>
                </value>
                <value>
                    <fullName>Quarter Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Payment_Terms__c</fullName>
        <description>Terms of payment.</description>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2percent</fullName>
                </value>
                <value>
                    <fullName>net30</fullName>
                </value>
                <value>
                    <fullName>COD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Payment__c</fullName>
        <description>Represents sign of absolute paid amount, that is inpayment (+, debit) or outpayment (-, credit), respectively</description>
        <label>Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Phase__c</fullName>
        <description>Workflow neutral description of the order Entry status.</description>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Send to SAP</fullName>
                    <label>Sent to SAP</label>
                </value>
                <value>
                    <fullName>Received By SAP</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Routed</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Date__c</fullName>
        <description>Enables tracking which conditions were used. By default
			current day. Can be changed if the order was taken on paper first and
			was added to the system after a price change</description>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Info_1__c</fullName>
        <label>Pricing Info 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Info_2__c</fullName>
        <label>Pricing Info 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Info_10__c</fullName>
        <label>Pricing Info 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pricing_Information__c</fullName>
        <description>Holds the pricing information (found conditions) which are directly related to the order.</description>
        <label>Pricing Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Print_Status__c</fullName>
        <description>--- Attribute no longer used --- Contains information about the successfully initiated print out process on the mobility device.</description>
        <label>Print Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotPrinted</fullName>
                    <default>true</default>
                    <label>NotPrinted</label>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>NotSuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Receipt_Currency__c</fullName>
        <description>Receipt currency of a order.</description>
        <label>Receipt Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>Yen</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link,
			&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Release_Geolocation__c</fullName>
        <description>Geolocation (Latitute and Longitude) to be fulfilled by mobility devices and not displayed in the order UI.</description>
        <inlineHelpText>Latitude (-90; 90)
        Longitude (-180; 180)</inlineHelpText>
        <label>Release Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ACCL__Release_Platform__c</fullName>
        <formula>TEXT(ACCL__Order_Template__r.ACCL__Release_Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Release_Time__c</fullName>
        <description>Date and time the sales document has been released.</description>
        <label>Release Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACCL__Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the responsible user.</description>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Selected_Rewards__c</fullName>
        <description>Holds mobility selected rewards and related items/products in JSON format.</description>
        <label>Selected Rewards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Total_Returned_Quantity__c</fullName>
        <description>Sum of all returned quantities</description>
        <label>Total Returned Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Total_Shipped_Quantity__c</fullName>
        <description>Sum of all shipped quantities</description>
        <label>Total Shipped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>